--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,13 @@
 .pull-left { float: left; }
 .pull-right { float: right; }
 
+.black-space-10 { height: 10px; }
 .black-space-20 { height: 20px; }
 
 @for $i from 1 through 110{
     .margin-left-#{$i} { margin-left: 1px * $i; }
+}
+
+@for $i from 1 through 1080{
+    .input-width-#{$i} { width: 1px * $i; }
 }
