模块表格改为下拉显示，调整模块名称样式，用vuex封装字典项匹配表字段

--- a/src/styles/elementui.scss
+++ b/src/styles/elementui.scss
@@ -34,7 +34,7 @@ li.el-submenu{
 }
 // table 样式
 div.el-table{
-    td, th { text-align: center; }
+    // td, th { text-align: center; }
     th {
         font-weight: bold;
         color: #344a5f;
