--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,13 +5,18 @@
 .pull-left { float: left; }
 .pull-right { float: right; }
 
-.black-space-10 { height: 10px; }
-.black-space-20 { height: 20px; }
-
 @for $i from 1 through 110{
     .margin-left-#{$i} { margin-left: 1px * $i; }
 }
 
-@for $i from 1 through 1080{
+@for $i from 1 through 110{
+    .margin-right-#{$i} { margin-right: 1px * $i; }
+}
+
+@for $i from 1 through 1920{
     .input-width-#{$i} { width: 1px * $i; }
+}
+
+@for $i from 1 through 1080{
+    .black-space-#{$i} { height: 1px * $i; }
 }
