按钮列表查询、新增、样式调整

--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -9,6 +9,9 @@ $mainColor: #f56c6c;
 // 左侧菜单背景色
 $navBackColor: #344a5f;
 
+// 内容头部背景色
+$mainTitleColor: #ededed;
+
 // 模板头部长度
 $layoutHeader: 55px;
 
