--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 .pull-left { float: left; }
 .pull-right { float: right; }
+.width-per-100 { width: 100%; }
 
 @for $i from 1 through 110{
     .margin-left-#{$i} { margin-left: 1px * $i; }
