--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,24 +6,44 @@
 .pull-right { float: right; }
 .width-per-100 { width: 100%; }
 
-@for $i from 1 through 110{
+@for $i from 1 through 1080{
     .margin-left-#{$i} { margin-left: 1px * $i; }
 }
 
-@for $i from 1 through 110{
+@for $i from 1 through 1080{
     .margin-right-#{$i} { margin-right: 1px * $i; }
 }
 
-@for $i from 1 through 110{
+@for $i from 1 through 1080{
     .margin-top-#{$i} { margin-top: 1px * $i; }
 }
 
-@for $i from 1 through 110{
+@for $i from 1 through 1080{
     .margin-bottom-#{$i} { margin-bottom: 1px * $i; }
+}
+
+@for $i from 1 through 1080{
+    .padding-left-#{$i} { padding-left: 1px * $i; }
+}
+
+@for $i from 1 through 1080{
+    .padding-right-#{$i} { padding-right: 1px * $i; }
+}
+
+@for $i from 1 through 1080{
+    .padding-top-#{$i} { padding-top: 1px * $i; }
+}
+
+@for $i from 1 through 1080{
+    .padding-bottom-#{$i} { padding-bottom: 1px * $i; }
 }
 
 @for $i from 1 through 1920{
     .input-width-#{$i} { width: 1px * $i; }
+}
+
+@for $i from 1 through 100{
+    .input-per-#{$i} { width: 1% * $i; }
 }
 
 @for $i from 1 through 1080{
